--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,12 @@ header{
 	padding-top: 25px;
 	text-align: center;
 }
-
-.headerinfo{
-
-}
-
-#img{
+#picture{
 	text-align: center;
+}
+.img{
+	width: 30%;
+	height: 30%;
 }
 
 .section{
